prevent word-break in long messages

--- a/app/styles/_custom.scss
+++ b/app/styles/_custom.scss
@@ -159,7 +159,7 @@ input[type=number]::-webkit-outer-spin-button {
   -ms-text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
   line-height: 1.5;    /* fallback */
-  word-break: break-all;
+  word-break: break-word;
 }
 .one-line-ellipsis {
   max-height: 1.4rem;  /* fallback */
